--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,3 +14,19 @@
   </div>
 
 
+  <div *ngIf="user">
+    <div class="container">
+      <div class="layout-row">
+        <div class="col-sm-6" style="float: left;">
+            <h3><strong>GitHub UserName: {{user.name}}</strong></h3>
+            <img class="rounded-circle" src="{{user.avatar_url}}">
+
+      </div>
+
+    </div>
+  </div>
+
+
+  
+</div>
+  
