--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -50,6 +50,27 @@
         </div>
 
 
+        <div class="col-sm-6" style="float: right;">
+          <div class="repo card">
+            <h3 style="text-align:center" class="card-header"><strong>USER REPOSITORIES</strong></h3>
+            <hr>
+            <div *ngFor="let repo of repos">
+                <div class="col-md-9 card-text">
+                  <h4>
+                    {{repo.name}}
+                  <a target="_blank" href="{{repo.html_url}}"><button style="float: right;">View Repo on Github</button>
+                  </a>
+                  </h4>
+                  <p>{{repo.description}}</p>
+                </div>
+                <div class="col-md-3 card-text">
+                  <span class="label label-default">{{repo.watchers}} Watchers</span>
+                  <span class="label label-primary">{{repo.forks}} Forks</span>
+                </div>
+              <hr>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
