--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -2,7 +2,18 @@
   background-color: aquamarine;
 }
 
+.guru {
+  padding: 10px;
+  margin: 10px;
+}
 
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 10px;
+  margin: 10px;
+
+}
 
 button {
   background-color: #4CAF50; /* Green */
