--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,6 +1,6 @@
 .jumbotron{
   background-color: aquamarine;
-  height: 200px;
+  height: 300px;
 }
 
 .guru {
@@ -13,6 +13,12 @@
   transition: 0.3s;
   padding: 10px;
   margin: 10px;
+  background: chocolate;
+
+}
+
+h2 {
+  color: #fafafa;
 
 }
 
@@ -44,12 +50,14 @@ button {
   position: relative;
   display: flex;
   min-width: 100%;
+  left: 14px;
+
 }
 .search-icon {
   position: absolute;
   top: 6px;
   left: 8px;
-  width: 14px;
+  width: 20px;
 }
 .clear-icon {
   position: absolute;
@@ -77,4 +85,11 @@ input {
   font-size: 16px;
   margin: 0;
   height: 50px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: chocolate;
 }
