--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: coral;
+  background-image: url(/src/assets/images/tee.jpg);
+  background-size: cover;
+
+}
